0.12.4/_sources/gettingstarted/examples/gallery/auto_examples_processing/transformations/index.rst


.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_transformations:

.. _examples-processing-transformations-index:

Transformations
---------------

This section contains examples of common masking, transposition, and unit
conversion workflows on NDDatasets.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows three common operations on a 2D infrared dataset: masking a saturated region, transposing the dataset, and converting axis units.">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_processing/transformations/images/thumb/sphx_glr_plot_masking_transpose_units_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_transformations_plot_masking_transpose_units.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Mask a saturated region and transform an IR dataset</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the standard preprocessing operations available in SpectroChemPy: normalization, mean-centering, autoscaling, Standard Normal Variate (SNV), and Multiplicative Scatter Correction (MSC).">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_processing/transformations/images/thumb/sphx_glr_plot_preprocessing_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_transformations_plot_preprocessing.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Chemometric preprocessing</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="SpectroChemPy preprocessing operations can be used as stateful transformers that learn statistics from a training set and reuse them on new data.  This is essential for machine-learning workflows where train and test sets must be processed with the same scaling parameters.">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_processing/transformations/images/thumb/sphx_glr_plot_transformers_sklearn_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_transformations_plot_transformers_sklearn.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Preprocessing transformers and scikit-learn compatibility</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gettingstarted/examples/gallery/auto_examples_processing/transformations/plot_masking_transpose_units
   /gettingstarted/examples/gallery/auto_examples_processing/transformations/plot_preprocessing
   /gettingstarted/examples/gallery/auto_examples_processing/transformations/plot_transformers_sklearn

